added vs studio project

--- a/API_with_EF_2022/appsettings.json
+++ b/API_with_EF_2022/appsettings.json
@@ -7,7 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "GameDb": "Data Source=DELLLAPTOP;Initial Catalog=BoardGames_2022;Trusted_Connection=True;TrustServerCertificate=True;"
+    "GameDb": "Data source=SHINEE_PC\\SQLEXPRESS;Initial Catalog=BoardGames_2022;Trusted_Connection=True;TrustServerCertificate=True;"
   }
-
 }
